add magic link
